# Azimuth

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.yaml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/navigator/: main.go
cmd/zm/: main.go
internal/cli/: ask.go  ask_integration_test.go  ask_test.go  batch_builder.go  doc.go  ingest.go  ingest_integration_test.go  ingest_runner.go  ingest_test.go  root.go  root_test.go  status.go  version.go
internal/config/: config.go  config_test.go  doc.go
internal/graph/: doc.go  query.go  query_integration_test.go  query_test.go  schema.go  schema_integration_test.go  schema_test.go  writer.go  writer_integration_test.go  writer_jobs.go  writer_test.go
internal/ingestion/: call_extractor_csharp.go  call_extractor_go.go  coordinator.go  coordinator_integration_test.go  coordinator_test.go  doc.go  parser_csharp.go  parser_csharp_stub.go  parser_csharp_test.go  walker.go  (+9 more)
orchestrator/: Dockerfile  pyproject.toml
orchestrator/orchestrator/: agent.py  config.py  main.py  schemas.py  state.py
orchestrator/orchestrator/graph/: client.py  queries.py
orchestrator/orchestrator/llm/: anthropic_client.py  client.py
orchestrator/orchestrator/nodes/: entry_point_finder.py  graph_walker.py  query_deconstruct.py  synthesis.py
orchestrator/tests/integration/: test_pipeline.py
orchestrator/tests/unit/: test_entry_point_finder.py  test_graph_walker.py  test_health.py  test_llm_client.py  test_query_deconstruct.py  test_synthesis.py
scripts/: health_check.sh
tests/: README.md
(+22 files in other folders)
